# VoxFormat

./: .gitignore  CMakeLists.txt  setup.sh
docs/: README.md
gui/: MainWindow.cpp  MainWindow.h
src/main/: loadWav.cpp  loadWav.h  main.cpp
src/transcription/: EventHandler.h  Formatter.h  SpeechProcessor.cpp  SpeechProcessor.h
tests/: CMakeLists.txt  FormatterTests.cpp  SpeechProcessorTests.cpp
